--- a/src/app/pages/suivi_/suivi/suivi.page.html
+++ b/src/app/pages/suivi_/suivi/suivi.page.html
@@ -796,7 +796,7 @@
                     <th mat-header-cell *matHeaderCellDef>annee</th>
                     <td mat-cell *matCellDef="let row"> 
                       <span>
-                        {{row.annee_du}} 
+                        {{row.annee_du}}-{{row.annee_du}}
                       </span>
                     </td>
                   </ng-container>
