--- a/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.scss
+++ b/src/app/pages/beneficiaire-bloc/beneficiaire-bloc.page.scss
@@ -1,14 +1,78 @@
+/******************
+*Table css
+********************/
 .container-matTab {
-    /**width: 100%;
-    overflow: auto;*/
     position: relative;
-}  
-.table-container {
+    width: 100%;
+  } 
+  .table-container {
     position: relative;
-    min-height: 200px;
-    max-height: 300px;
     overflow: auto;
+  }
+  table {
+    width: 100%;
+  }
+  tr.mat-header-row {
+    height: 30px;
+    background-color: rgb(116 177 198);;
+  }
+  th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
+    padding-left: 2px;
+  }
+  th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type {
+    padding-right: 0px;
+  }
+  tr.mat-row, tr.mat-footer-row {
+    height: 25px;
+  }
+  th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
+    border-right-width: 0.4px;
+    border-right-style: inset;
+  }
+  
+  /**
+  */
+  .btn-info {
+    color: white;
+    background-color: #0d3c68;
+    padding: 0px;
+  }
+  // Button
+  .btn-dimension {
+    height: 23px!important;
+    line-height: 23px!important;
+  }
+ /******************
+*Expanded Table css
+********************/
+.sv-element-detail td {
+  border-bottom-width: 0;
 }
-table {
-    width: 90%;
+  
+.sv-element-detail {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e5f1e1;
+  box-shadow: inset 1px 2px 5px #87b3cc;
+  border-radius: 2px;
+}
+.sv-element-detail-vide {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fddbcc !important;
+  border-radius: 2px;
+}
+tr.detail-row {
+  height: 0!important;
+}
+tr.sv-element-row:not(.sv-expanded-row):hover {
+  background: rgb(236, 235, 132);
+}
+  
+tr.sv-element-row:not(.sv-expanded-row):active {
+  background: #e4b5ff !important;
 }
