--- a/src/app/pages/beneficiaire/beneficiaire.page.html
+++ b/src/app/pages/beneficiaire/beneficiaire.page.html
@@ -183,9 +183,6 @@
           <div class="child-row">
             <button mat-raised-button (click)="onUpdatePms({src: 'add'})" class="demo-button" *ngIf="isUpdate" [disabled]="isAddPms || isEditRowPms">Ajouter</button>
           </div>
-          <div class="child-row">
-            <button mat-raised-button (click)="loadPArcelleTest()" class="demo-button">Refresh</button>
-          </div>
         </div>
       </div>
       <!--Column content-->
@@ -300,7 +297,7 @@
                       <a (click)="onUpdatePms({src: 'edit', element: row, ind_pms: i})">Editer</a>
                     </div>
                     <div class="child-row-btn">
-                      <button mat-flat-button class="btn-info btn-dimension" (click)="onAddShowPms({index_: i})">Afficher</button>
+                      <button mat-flat-button class="btn-info btn-dimension" (click)="row.isExpanded = !row.isExpanded">Afficher</button>
                     </div>
                   </div>
                 </td>
@@ -320,81 +317,218 @@
                 <td mat-cell *matCellDef="let element; dataIndex as i;" [attr.colspan]="displayedColumnsBenef.length">
                   <div class="row sv-element-detail" [@detailExpand]="element.isExpanded && element.parcelle.length > 0 || isUpdate && element.isExpanded? 'expanded' : 'collapsed'">
                     <table mat-table [dataSource]="element.parcelle">
-
-                      ['', 'code_parce', 'ref_gps', 'lat', 'log', 'superficie', '', '', 'action'];
-
+                  
                       <!-- Annee agricole Column -->
                       <ng-container matColumnDef="annee">
                         <th mat-header-cell *matHeaderCellDef> Annee </th>
-                        <td mat-cell *matCellDef="let row"> {{row.annee_du}}-{{row.annee_au}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.annee_du}}-{{row.annee_au}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_annee">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
 
                       <!-- Saison Column -->
                       <ng-container matColumnDef="saison">
                         <th mat-header-cell *matHeaderCellDef> Saison </th>
-                        <td mat-cell *matCellDef="let row"> {{row.saison}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.saison}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_saison">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
 
                       <!-- Saison Column -->
                       <ng-container matColumnDef="variette">
                         <th mat-header-cell *matHeaderCellDef> Variette </th>
-                        <td mat-cell *matCellDef="let row"> {{row.variette}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.variette}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_variette">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
 
                       <!-- Objectif Column -->
                       <ng-container matColumnDef="objectif">
                         <th mat-header-cell *matHeaderCellDef> Objectif </th>
-                        <td mat-cell *matCellDef="let row"> {{row.objectif}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.objectif}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_objectif">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
 
                       <!-- Fokontany Column -->
                       <ng-container matColumnDef="adresse">
                         <th mat-header-cell *matHeaderCellDef> Fokontany </th>
-                        <td mat-cell *matCellDef="let row"> {{row.fokontany_prc}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.fokontany_prc}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_adresse">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
 
                       <!-- Fokontany Column -->
                       <ng-container matColumnDef="indication">
                         <th mat-header-cell *matHeaderCellDef> Indication </th>
-                        <td mat-cell *matCellDef="let row"> {{row.indication}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.indication}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_indication">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
             
                       <!-- Code_parce Column -->
                       <ng-container matColumnDef="code_parce">
                         <th mat-header-cell *matHeaderCellDef> code parce </th>
-                        <td mat-cell *matCellDef="let row"> {{row.code_parce}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.code_parce}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_code_parce">
+                        <th mat-header-cell *matHeaderCellDef>new--</th>
                       </ng-container>
             
                       <!-- ref_gps Column -->
                       <ng-container matColumnDef="ref_gps">
                         <th mat-header-cell *matHeaderCellDef> ref_gps </th>
-                        <td mat-cell *matCellDef="let row"> {{row.ref_gps}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.ref_gps}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                      </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_ref_gps">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
             
-                      <!-- Sexe PA Column -->
+                      <!-- lat Column -->
                       <ng-container matColumnDef="lat">
                         <th mat-header-cell *matHeaderCellDef> lat </th>
-                        <td mat-cell *matCellDef="let row"> {{row.lat}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.lat}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                        </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_lat">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
             
-                      <!-- cin PA Column -->
+                      <!-- log Column -->
                       <ng-container matColumnDef="log">
                         <th mat-header-cell *matHeaderCellDef> log </th>
-                        <td mat-cell *matCellDef="let row"> {{row.log}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;"> 
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.logitude}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                        </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_log">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
             
-                      <!-- surnom PA Column -->
+                      <!--Superficie Column -->
                       <ng-container matColumnDef="superficie">
                         <th mat-header-cell *matHeaderCellDef> superficie </th>
-                        <td mat-cell *matCellDef="let row"> {{row.superficie}} </td>
+                        <td mat-cell *matCellDef="let row; let ind = index;">
+                          <span *ngIf="!isRowEditParce || (isRowEditParce && indexEditRowParce != ind && indexEditRowPms == i) || (indexEditRowPms != i && isRowEditParce)">
+                            {{row.superficie}}
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            up--
+                          </span>
+                        </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_superficie">
+                        <th mat-header-cell *matHeaderCellDef> new-- </th>
                       </ng-container>
 
                       <ng-container matColumnDef="action">
-                        <th mat-header-cell *matHeaderCellDef> Action </th>
-                        <td mat-cell *matCellDef="let row">  </td>
+                        <th mat-header-cell *matHeaderCellDef>
+                          <button mat-flat-button class="btn-info btn-dimension" (click)="onUpdatedParce({src: 'add', data_pms: element, index_pms: i})">Ajouter</button>
+                        </th>
+                        <td mat-cell *matCellDef="let row; let ind = index;">
+                          <span *ngIf="!isRowEditParce">
+                            <a (click)="onUpdatedParce({src: 'edit', data_pms: element, data_parce: row, index_parce: ind, index_pms: i})">Editer</a>
+                          </span>
+                          <span *ngIf="indexEditRowParce == ind && indexEditRowPms == i  && isRowEditParce">
+                            <div class="flex-btn-content" fxLayout="row">
+                              <div class="child-row">
+                                <button mat-flat-button class="btn-info btn-dimension" (click)="onCancelParce({src: 'edit'})">Annuler</button>
+                              </div>
+                              <div class="child-row">
+                                <button mat-flat-button class="btn-info btn-dimension" (click)="onSaveParce({src: 'edit', elem_parce: row, elem_pms: element})">modifier</button>
+                              </div>
+                            </div>
+                          </span>
+                        </td>
+                      </ng-container>
+                      <ng-container matColumnDef="new_action">
+                        <th mat-header-cell *matHeaderCellDef>
+                          <div class="flex-btn-content" fxLayout="row">
+                            <div class="child-row">
+                              <button mat-flat-button class="btn-info btn-dimension" (click)="onCancelParce({src: 'add'})">Annuler</button>
+                            </div>
+                            <div class="child-row">
+                              <button mat-flat-button class="btn-info btn-dimension" (click)="onSaveParce({src: 'add', elem_pms: element})">Enregistrer</button>
+                            </div>
+                          </div>
+                        </th>
                       </ng-container>
 
                       <tr mat-header-row *matHeaderRowDef="displayedColumnsParcePms; sticky: true"></tr>
+                      <tr [hidden]="!isAddParce || indexEditRowPms != i && isAddParce" mat-header-row *matHeaderRowDef="displayedColumnsAddParcePms"></tr>
                       <tr mat-row *matRowDef="let row; columns: displayedColumnsParcePms;"></tr>
                   
                       <!-- Row shown when there is no matching data. -->
